.overview -padding-top to prevent overlap

--- a/integrations-client/app/styles/app.css
+++ b/integrations-client/app/styles/app.css
@@ -735,6 +735,7 @@ button{
 }
 .main .overview{
     padding:20px;
+    padding-top:50px;
 }
 .main .hidden-md-up .overview{
     margin-top:20px;
